# hypermodern-mikeh

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml  url.txt
docs/: conf.py  index.rst
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
