[tool.poetry]
name = "hypermodern-python-mikeh"
version = "0.1.0"
description = "Hypermodern Python Project"
authors = ["MichaelHarrison87 <harrisoneighty7@gmail.com>"]
license = "GNU GPL 3.0"
readme = "README.md"
homepage = "https://github.com/MichaelHarrison87/hypermodern-mikeh"
repository = "https://github.com/MichaelHarrison87/hypermodern-mikeh"
keywords = ["hypermodern"]
packages = [
    { include = "hypermodern_python", from = "src" }
]

[tool.poetry.scripts]
hypermodern-python="hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
