[tool.poetry]
name = "hypermodern-python-mikeh"
version = "0.1.0"
description = "Hypermodern Python Project"
authors = ["MichaelHarrison87 <harrisoneighty7@gmail.com>"]
license = "GNU GPL 3.0"
readme = "README.md"
homepage = "https://github.com/MichaelHarrison87/hypermodern-mikeh"
repository = "https://github.com/MichaelHarrison87/hypermodern-mikeh"
keywords = ["hypermodern"]
packages = [
    { include = "hypermodern_python", from = "src" }
]

[tool.poetry.scripts]
hypermodern-python="hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3.1"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
